refactor(SOFT-02): refactor handler and exception files